frontend/tests/cases/positive/polymorphism/polyGradeGood.gr
-- Correct grade generic function
cp : forall {a : Type, c : Coeffect} . a [(1 + 1):c] -> (a × a)
cp [x] = (x, x)