frontend/tests/cases/negative/hsup/pushPair.gr
pushPair : forall {a : Type, b : Type, k : Coeffect, c : k} . (a × b) [c] -> a [c] × b [c]
pushPair = push @(,)

pushPair' : forall {a : Type, b : Type, k : Coeffect, c : k} . (a × b) [c] -> a [c] × b [c]
pushPair' [(x, y)] = ([x], [y])